--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "lucide-react": "^0.378.0",
+    "sass": "^1.77.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
